KUDU-1199. Prevent overlap of Fork Me on Github banner
Because of the dynamic nature of our web site's width, the Fork Me on
Github banner will periodically overlap with the top nav. This patch
makes it so that the banner will only show on large screens (larger than
1400px wide).

Tested on Chrome and Firefox on Linux.

Reviewed-on: http://gerrit.cloudera.org:8080/1295
Tested-by: Misty Stanley-Jones <misty@apache.org>

--- a/css/kudu.css
+++ b/css/kudu.css
@@ -12,6 +12,21 @@ footer {
     clear: both;
 }
 
+.fork-me-on-github img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 149px;
+    height: 149px;
+    border: 0;
+}
+
+@media (max-width: 1400px) {
+  .fork-me-on-github {
+    display: none;
+  }
+}
+
 .btn-info {
     background-color: #1f99d5;
     border-color: #0e76bc;
@@ -82,6 +97,7 @@ footer {
 
 .kudu-site .navbar-default {
     background-color: #fff;
+    padding-right:20px;
     border: none;
 }
 
